--- a/_posts/1000-03-03-info.html
+++ b/_posts/1000-03-03-info.html
@@ -2,4 +2,9 @@
 layout: default
 title: "Info"
 ---
-bro
+
+<img src="/img/america.jpg" />
+
+<p>Walker Olesen is a photographer living in Los Angeles, CA.</p>
+
+<p>Contact: <a href="mailto:studio@walkerolesen@com">studio@walkerolesen.com</a></p>
