--- a/index.html
+++ b/index.html
@@ -2,4 +2,24 @@
 layout: default
 ---
 
+<!--
 
+#######
+#
+# Use the html below to redirect your index page to a content section.
+# 
+# 1. Remove the "--- layout: default ---" from the top of this file.
+# 2. Change the meta tag below so that url=XXXXXXX points to the correct url.
+# 3. Remove this comment block and the <!-- surrounding it.
+#
+#######
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta http-equiv="refresh" content="0;url=/black-white-color" />
+</head>
+</html>
+
+-->
