config to use non-root url

--- a/_posts/1000-03-03-info.html
+++ b/_posts/1000-03-03-info.html
@@ -3,7 +3,7 @@ layout: default
 title: "Info"
 ---
 
-<img src="/img/america.jpg" />
+<img src="{{site.baseurl}}/img/america.jpg" />
 
 <p>Walker Olesen is a photographer living in Los Angeles, CA.</p>
 
