--- a/_posts/2011-10-10-black-white-color.html
+++ b/_posts/2011-10-10-black-white-color.html
@@ -1,7 +1,7 @@
 ---
 layout: section
 title: "Black & White & Color"
-base_url: "/img/bwc/"
+base_url: "img/bwc/"
 
 photos:
   - { filename: "1.jpg", title: "Sleeping", subtitle: "Durango, CO" }
